--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,25 @@
 * {
-	padding: 0;
 	margin: 0;
-	vertical-align: baseline;
-	list-style: none;
+	padding: 0;
 	border: 0;
+	vertical-align: baseline;
 	text-decoration: none;
+	list-style: none;
+	box-sizing: border-box;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+button,
+input,
+select,
+textarea {
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background: transparent;
+	line-height: inherit;
 }
